# wordscaper

./: .clang-format  .gitignore  CMakeLists.txt
include/utilities/: config.hpp  profiling.hpp  types.hpp
include/visual/: screenparser.hpp  screenshot.hpp
src/visual/: screenshot.cpp
test/: CMakeLists.txt  CMakePresets.json
test/src/: screenparser_test.cpp  screenshot_test.cpp  test1.cpp
utilities/scripts/: extract_letters.py
